2012-08-07 00:09-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXNativeTarget.m: Generate the links with a relative path.

2012-03-14 18:25-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* PBXFrameworksBuildPhase.m: Remove commented out code..
	* README: Update readme to reflect new name.

2012-02-25 11:36-EST Gregory John Casamento <greg.casamento@gmail.com>

	* PBXResourcesBuildPhase.m: Fix issues with copying of resources
	which are localized.

2012-02-25 10:29-EST Gregory John Casamento <greg.casamento@gmail.com>

	* PBXVariantGroup.m: More fixes for appending resource names.
	Only use the last path component.

2012-02-25 00:53-EST Gregory John Casamento <greg.casamento@gmail.com>

	* ChangeLog: Add ChangeLog.
	* PBXVariantGroup.m: Fix issue with appending resource
	names.
